# directors-on-directors

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml
evals/: eval_set.jsonl  probe_candidates.py  run_evals.py  tune_retrieval.py
evals/results/: 20260610T082625Z.json  20260610T083554Z.json  20260610T084612Z.json  20260610T090152Z.json  20260611T144944Z.json  20260612T140512Z.json
scripts/: ask.py  build_index.py  fetch_transcripts.py  fetch_wikipedia.py
src/dod/: chunk.py  rag.py
