[project]
name = "directors-on-directors"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
